# mcp2210-hidapi

./: CMakeLists.txt  Makefile  README.md  main.c  main.h.in
docs/: README.md
include/mcp2210-hidapi/: mcp2210-hidapi-debug.h  mcp2210-hidapi-gpio.h  mcp2210-hidapi-misc.h  mcp2210-hidapi-spi.h  mcp2210-hidapi.h
src/: CMakeLists.txt  mcp2210-hidapi-gpio.c  mcp2210-hidapi-misc.c  mcp2210-hidapi-spi.c  mcp2210-hidapi.c
